sample-factory start

--- a/experiments/learning/train_dir/default_experiment/config.json
+++ b/experiments/learning/train_dir/default_experiment/config.json
@@ -2,8 +2,8 @@
   "help": false,
   "algo": "APPO",
   "env": "my_custom_multi_env_v1",
-  "experiment": "example_multi",
-  "train_dir": "/mnt/c/Users/Daniel/OneDrive/Ambiente de Trabalho/MIA/TSI/proj/gym-pybullet-drones/experiments/learning/train_dir",
+  "experiment": "default_experiment",
+  "train_dir": "/mnt/c/Users/danie/Desktop/Uni/TSI/proj/gym-pybullet-drones/experiments/learning/train_dir",
   "restart_behavior": "resume",
   "device": "cpu",
   "seed": null,
@@ -15,7 +15,7 @@
   "worker_num_splits": 2,
   "policy_workers_per_policy": 1,
   "max_policy_lag": 1000,
-  "num_workers": 16,
+  "num_workers": 12,
   "num_envs_per_worker": 2,
   "batch_size": 1024,
   "num_batches_per_epoch": 1,
@@ -67,7 +67,7 @@
   "heartbeat_reporting_interval": 180,
   "train_for_env_steps": 10000000000,
   "train_for_seconds": 10000000000,
-  "save_every_sec": 5,
+  "save_every_sec": 120,
   "keep_checkpoints": 2,
   "load_checkpoint_kind": "latest",
   "save_milestones_sec": -1,
@@ -120,15 +120,13 @@
   "pbt_target_objective": "true_objective",
   "pbt_perturb_min": 1.1,
   "pbt_perturb_max": 1.5,
-  "custom_env_episode_len": 10,
-  "command_line": "--algo=APPO --env=my_custom_multi_env_v1 --experiment=example_multi --save_every_sec=5 --experiment_summaries_interval=10",
+  "custom_env_episode_len": 100,
+  "command_line": "--env my_custom_multi_env_v1 --custom_env_episode_len 100 --device=cpu",
   "cli_args": {
-    "algo": "APPO",
     "env": "my_custom_multi_env_v1",
-    "experiment": "example_multi",
-    "experiment_summaries_interval": 10,
-    "save_every_sec": 5
+    "device": "cpu",
+    "custom_env_episode_len": 100
   },
-  "git_hash": "24cfdf341e61dae08bbb625761f4cee0699e23d0",
+  "git_hash": "755cc69de7a41516f3d5ec14ad092119cc02e755",
   "git_repo_name": "https://github.com/DanielCarneiro123/gym-pybullet-drones.git"
 }
